Fix events list running too long on small devices

--- a/src/features/Events.module.css
+++ b/src/features/Events.module.css
@@ -12,6 +12,7 @@
 
 .eventName {
   overflow: hidden;
+  width: 0;
   flex: 1 0;
   flex-grow: 1000;
   padding-right: 0;
